--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h3>Ajouter une tâche</h3>
 
     <fieldset>
-        <form class="row">
+        <form class="row" v-on:submit.prevent="addElement">
             <div class="input-field col m6 offset-m3">
                 <input id="taskTitle" type="text" v-model="titleTask">
                 <label for="taskTitle">Intitulé de la tâche</label>
@@ -31,7 +31,7 @@
             </div>
         </form>
     </fieldset>
-
+    
     <h3>Liste des tâches</h3>
 
     <p>Il reste <strong>{{ remaining | pluralize('tâche') }} </strong> sur <strong>{{ tasks.length }}</strong> à effectuer.</p>  
