--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
     <p>Il reste <strong>{{ remaining | pluralize('tâche') }} </strong> sur <strong>{{ tasks.length }}</strong> à effectuer.</p>  
  
     <ul class="collection">
-        <li class="collection-item" v-for="(task, index) in tasks">
-            <input type="checkbox" :id="'t_'+(index+1)" v-model="task.isDone">
-            <label :for="'t_'+(index+1)">{{ task.title }}</label>
-            <a href="#" @click="removeElement(index)" class="link-delete" title="Supprimer cette tâche">
-                <i class="small material-icons">delete_forever</i>
-            </a>
-        </li>
+        <task :task="task" :index="index" v-for="(task, index) in tasks"></task>
     </ul>
 
 </main><!-- Fin de l'app Vue.js -->
